--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".MatchesActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ProfileActivity" />
